style(simplepagination): fixed misaligned pagination footer

--- a/packages/react/src/components/List/_list.scss
+++ b/packages/react/src/components/List/_list.scss
@@ -38,6 +38,7 @@
 
         .#{$iot-prefix}-simple-pagination-page-label {
           flex-grow: 2;
+          text-align: right;
         }
       }
     }
